sdk_tests/tests/pbc_contract_codegen/fail/zk/secret_binary_derive_unsupported_enum_rust_style.rs
use pbc_zk::{Sbi32, SecretBinary};

pub fn main() {}

#[derive(SecretBinary)]
enum SecretEnum {
    Some { data: Sbi32 },
    None,
}
