sdk_tests/tests/pbc_contract_codegen/fail/zk/secret_binary_derive_unsupported_enum_rust_style.stderr
error: proc-macro derive panicked
 --> tests/pbc_contract_codegen/fail/zk/secret_binary_derive_unsupported_enum_rust_style.rs:5:10
  |
5 | #[derive(SecretBinary)]
  |          ^^^^^^^^^^^^
  |
  = help: message: Attribute 'discriminant' is required for struct enum variants
